# CookHelperBot

./: .env_prod  .gitignore  README.md  pyproject.toml
core/: asgi.py  settings.py  wsgi.py
core/apps/bot/: main_bot.py
core/apps/bot/management/commands/: run_bot.py
