[tool.poetry]
name = "cookhelperbot"
version = "0.1.0"
description = ""
authors = ["Ilia Mediankin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "5.1.2"
environs = "11.0.0"
gunicorn = "23.0.0"
pytelegrambotapi = "4.23.0"
aiohttp = "3.10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
